--- a/views/item.ejs
+++ b/views/item.ejs
@@ -1,5 +1,5 @@
-<ul>
+<ul class="list-group">
 <% for (let item of items) { %>
-    <li><%- item.name %></li>
+    <li class="list-group-item"><%- item.name %></li>
 <% } %>
 </ul>
